"Fixed" status bar on ios PWA

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
-    line-height: 1.5;
+	line-height: 1.5;
+	background-color: #5161ce;
 }
 * {
 	margin: 0;
